# AgentOps-Mirror-AI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
ai/: Dockerfile  __init__.py  requirements.txt
audit-engine/: .dockerignore  Dockerfile  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  logging.py  main.py
backend/app/api/: agents.py  analytics.py  auth.py  health.py  integrations.py  personas.py  replay.py  reports.py  stress_test.py  users.py  websocket.py
backend/app/core/: redis.py  security.py
backend/app/database/: __init__.py
backend/app/models/: __init__.py  agent.py  audit_log.py  conversation.py  finding.py  integration.py  persona.py  report.py  risk_score.py  stress_test_run.py  transcript_message.py  user.py
backend/app/schemas/: __init__.py  agent.py  auth.py  common.py  conversation.py  finding.py  health.py  integration.py  persona.py  report.py  stress_test.py  user.py
backend/app/services/: agent_service.py  analytics_service.py  auth_service.py  integration_service.py  persona_service.py  replay_service.py  report_service.py  stress_test_service.py  user_service.py  websocket_service.py
backend/app/tests/: test_auth.py  test_health.py  test_models.py  test_services.py
database/: alembic.ini  schema.sql
demo_data/: conversations.json  demo_generator.py  (+4 more)
(+166 files in other folders)
