[project]
name = "agentops-backend"
version = "1.0.0"
description = "AgentOps Mirror AI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis[hiredis]>=5.0.7",
    "celery[redis]>=5.4.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "structlog>=24.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
